# OOGL-Cmake

./: .gitignore  CMakeLists.txt  README.md  null.cpp
.github/workflows/: c-cpp.yml  linux-pipeline.yml  windows-pipeline.yml
include/GL/GL/: Context.hpp  Extensions.hpp  Shader.hpp
src/GL/: CMakeLists.txt
src/GL/GL/: CMakeLists.txt  Extensions.cpp  Shader.cpp
src/GL/Math/: CMakeLists.txt
src/GL/Util/: CMakeLists.txt  Image.cpp  Mesh2.cpp
src/GL/Util/libjpeg/: CMakeLists.txt
src/GL/Util/libpng/: CMakeLists.txt
src/GL/Util/zlib/: CMakeLists.txt
src/GL/Window/: CMakeLists.txt  Window.cpp  Window_X11.cpp
